--- a/includes/artisans/artisan-cpt.css
+++ b/includes/artisans/artisan-cpt.css
@@ -122,7 +122,33 @@
 }
 
 .kz-view-license:hover {
-    background-color: #005177;
+    background-color: #2b589c;
+}
+
+
+.trade-bubbles {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.trade-bubble {
+    display: inline-block;
+    background-color: #f8f8f8d6;
+    color: #515151;
+    padding: 5px 10px;
+    border: 1px solid #c4c4c4;
+    border-radius: 15px;
+    font-size: 14px;
+    font-weight: bold;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.trade-bubble:hover {
+    background-color: #f1f1f1;
+    cursor: pointer;
 }
 
 
