--- a/includes/artisans/artisan-registration-form.css
+++ b/includes/artisans/artisan-registration-form.css
@@ -423,7 +423,7 @@
 /* Add a checkmark inside the checkbox */
 .kz-checkbox:checked::after {
     content: '✔';
-    color: white;
+    color: blue !important;
     font-size: 14px;
     position: absolute;
     top: 50%;
@@ -438,6 +438,7 @@
     font-size: 1em;
     color: #333;
     margin-right: 15px;
+    font-weight: 500;
     text-align: start;
 }
 
