--- a/includes/service-form/serviceForm/frontend/assets/css/frontend-form.css
+++ b/includes/service-form/serviceForm/frontend/assets/css/frontend-form.css
@@ -157,3 +157,9 @@ button:hover {
         margin-right: 5px;
     }
 }
+
+
+.swal2-confirm.swal2-styled.swal2-default-outline{
+    color: #ebebeb;
+
+}
